Refactor articles to move hero section to metadata.

--- a/metalsmith/layouts/article.html
+++ b/metalsmith/layouts/article.html
@@ -8,6 +8,8 @@
 
         <h1>{{ title }}</h1>
         <time>{{ date }}</time>
+
+        {{> hero }}
         {{{ contents }}}
 
         {{> footer }}
