--- a/metalsmith/layouts/partials/hero.html
+++ b/metalsmith/layouts/partials/hero.html
@@ -1,16 +1,16 @@
-<div>
+<div id="attachment_2454" style="width: 590px" class="wp-caption aligncenter">
     <img alt="{{ hero.imgAlt }}"
          src="{{ hero.imgUrlSrc }}"
          srcset="{{ hero.imgUrlSrc }} 648w"
          sizes="(max-width: 648px) 100vw, 648px">
-    <p>
+    <p class="wp-caption-text">
         {{ hero.creditText }}
         <a href="{{ hero.creditUrlSrc }}"
            title="{{ hero.creditUrlTitle }}">
            {{ hero.creditUrlText }}
         </a>.
     </p>
-    <p>
+    <p class="blog-featured-caption">
         {{{ hero.caption }}}
     </p>
 </div>
