--- a/metalsmith/layouts/partials/footer.html
+++ b/metalsmith/layouts/partials/footer.html
@@ -1,8 +1,5 @@
-<!-- Google Analytics -->
-<script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', '{{ gaAccount }}', '{{ gaDomain }}'); // Modified to track the subdomain.
-    ga('require', 'displayfeatures');
-    ga('send', 'pageview');
-</script>
-<script src="https://www.google-analytics.com/analytics.js" async defer></script>
+<footer class="footer" role="contentinfo">
+    <p class="copyright">
+        &copy; 2017 <a href="{{ buildPath }}" title="About David Timmons">David Timmons</a>. All rights reserved.
+    </p>
+</footer>
