--- a/metalsmith/layouts/partials/head.html
+++ b/metalsmith/layouts/partials/head.html
@@ -24,4 +24,5 @@
 
     <link rel="stylesheet" href="{{ buildPath }}static/css/normalize.css">
     <link rel="stylesheet" href="{{ buildPath }}static/css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:400,400i,700"> 
 </head>
