--- a/metalsmith/layouts/partials/footer.html
+++ b/metalsmith/layouts/partials/footer.html
@@ -1,5 +1,6 @@
 <footer class="footer" role="contentinfo">
     <p class="copyright">
         &copy; 2017 <a href="{{ buildPath }}" title="About David Timmons">David Timmons</a>. All rights reserved.
+        <br><b>Disclaimer:</b> My views do not necessarily reflect those of my employer.
     </p>
 </footer>
